@@ -1,7 +1,6 @@
 package com.mantimetrics.parser;
 
 import com.github.javaparser.JavaParser;
-import com.github.javaparser.ParseProblemException;
 import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.body.MethodDeclaration;
 import com.mantimetrics.git.GitService;
@@ -23,77 +22,54 @@ public class CodeParser {
         this.gh = gh;
     }
 
+    /**
+     * @param fileToKeys pre-computed map: file path (relative) → list of JIRA keys
+     */
     public List<MethodData> parseAndComputeOnline(
             String owner,
             String repo,
             String ref,
-            MetricsCalculator calc
-    ) throws CodeParserException {
+            MetricsCalculator calc,
+            Map<String,List<String>> fileToKeys
+    ) throws CodeParserException, IOException {
 
-        logger.info("Analysing {}/{}@{}", owner, repo, ref);
+        // 1) download+unzip
+        Path repoRoot = gh.downloadAndUnzipRepo(owner, repo, ref);
 
-        // 1) download+extract the entire repo in ZIP
-        Path repoRoot;
-        try {
-            repoRoot = gh.downloadAndUnzipRepo(owner, repo, ref);
-        } catch (IOException e) {
-            throw new CodeParserException("ZIP download error for " + repo+"@"+ref, e);
-        }
-
-        // 2) retrieve branch and SHA
-        String branch;
-        String commitId;
-        try {
-            branch   = gh.getDefaultBranch(owner, repo);
-            commitId = gh.getLatestCommitSha(owner, repo);
-        } catch (IOException e) {
-            throw new CodeParserException("Branch/commit error for "+repo+"@"+ref, e);
-        }
-
-        // 3) **Pre-calculate** the map file→JIRA-keys in one go
-        Map<String,List<String>> fileToKeys;
-        try {
-            fileToKeys = gh.getFileToIssueKeysMap(owner, repo);
-        } catch (IOException e) {
-            logger.warn("Cannot build file→issueKey map: {}", e.getMessage());
-            fileToKeys = Collections.emptyMap();
-        }
+        // 2) branch & SHA
+        String branch   = gh.getDefaultBranch(owner, repo);
+        String commitId = gh.getLatestCommitSha(owner, repo);
 
         List<MethodData> out = new ArrayList<>();
-
-        // 4) search all .java
         try (Stream<Path> files = Files.walk(repoRoot)) {
-            Map<String, List<String>> finalFileToKeys = fileToKeys;
             files.filter(p -> p.toString().endsWith(".java"))
                     .forEach(path -> {
-                        String rel = repoRoot.relativize(path).toString().replace('\\','/');
+                        String rel = repoRoot.relativize(path)
+                                .toString()
+                                .replace('\\','/');
+                        boolean isBuggy = !fileToKeys.getOrDefault(rel, List.of()).isEmpty();
+
                         try {
                             String src = Files.readString(path);
                             CompilationUnit cu = new JavaParser().parse(src).getResult().orElseThrow();
-
-                            // ✅ determines whether the file is 'buggy'.
-                            boolean isBuggy = !finalFileToKeys.getOrDefault(rel, List.of()).isEmpty();
-
-                            // extract methods
                             for (MethodDeclaration m : cu.findAll(MethodDeclaration.class)) {
                                 m.getRange().ifPresent(r -> {
                                     var mets = calc.computeAll(m);
                                     MethodData md = new MethodData.Builder()
                                             .projectName(repo)
-                                            .path("/"+rel+"/")
+                                            .path("/" + rel + "/")
                                             .methodSignature(m.getDeclarationAsString(true,true,true))
                                             .releaseId(branch)
                                             .versionId(ref)
                                             .commitId(commitId)
                                             .metrics(mets)
-                                            .commitHashes(Collections.emptyList())
+                                            .commitHashes(List.of())  // se vuoi, puoi comunque popolarlo
                                             .buggy(isBuggy)
                                             .build();
                                     out.add(md);
                                 });
                             }
-                            logger.debug("File {}: {} metodi", rel, cu.findAll(MethodDeclaration.class).size());
-                        } catch (IOException|ParseProblemException ex) {
+                        } catch (Exception ex) {
                             logger.warn("Skip {} due to {}", rel, ex.getMessage());
                         }
                     });
@@ -101,7 +77,6 @@ public class CodeParser {
             throw new CodeParserException("Directory walk failed", e);
         }
 
-        logger.info("Analysed {} methods in {}/{}@{}", out.size(), owner, repo, ref);
         return out;
     }
 }
